--- a/alis.conf
+++ b/alis.conf
@@ -13,7 +13,7 @@
 ## LOG_TRACE outputs the comands executed.
 ## LOG_FILE generates a log file with the commands executed and output generated during installation.
 ### The log file is saved to /var/log/alis.log.
-KEYS="es"
+KEYS="us"
 LOG_TRACE="true"
 LOG_FILE="false"
 
@@ -33,7 +33,7 @@ LOG_FILE="false"
 ### "manual" allows to specify which existing partitions are used for boot partition and root partition.
 ## PARTITION_MOUNT_POINTS mount points, partition number and directory, to mount from DEVICE.
 ## GPT_AUTOMOUNT sets whether to use GPT partition automounting
-DEVICE="auto !/dev/sda !/dev/nvme0n1 !/dev/vda !/dev/mmcblk0" # sata nvme mmc (single)
+DEVICE="!auto !/dev/sda /dev/nvme0n1 !/dev/vda !/dev/mmcblk0" # sata nvme mmc (single)
 DEVICE_TRIM="true"
 LVM="false"
 LUKS_PASSWORD=""
@@ -68,11 +68,11 @@ PING_HOSTNAME="mirrors.kernel.org"
 ## KERNELS_PARAMETERS specific kernel parameters to set on boot. eg. iommu=soft
 REFLECTOR="false"
 REFLECTOR_COUNTRIES=("Spain")
-PACMAN_MIRROR="https://mirrors.kernel.org/archlinux/\$repo/os/\$arch"
+PACMAN_MIRROR="https://mirror.xeonbd.com/archlinux/\$repo/os/\$arch"
 PACMAN_PARALLEL_DOWNLOADS="true"
 KERNELS="!linux-lts !linux-lts-headers !linux-hardened !linux-hardened-headers !linux-zen !linux-zen-headers" # (multiple)
 KERNELS_COMPRESSION="!gzip !bzip2 !lzma !xz !lzop !lz4 zstd"
-KERNELS_PARAMETERS="!iommu=soft !nvme_load=YES"
+KERNELS_PARAMETERS="!iommu=soft !nvme_load=YES quiet vt.global_cursor_default=0 vconsole.font=ter-132n loglevel=3 systemd.show_status=auto rd.udev.log_level=3"
 
 # aur
 ## AUR_PACKAGE the AUR command to install in case some package requires it, only is installed if necessary.
@@ -89,39 +89,41 @@ AUR_PACKAGE="paru-bin !yay-bin !paru !yay !aurman" # (single)
 ## DISPLAY_DRIVER_HARDWARE_VIDEO_ACCELERATION, DISPLAY_DRIVER_HARDWARE_VIDEO_ACCELERATION_INTEL add support for hardware video acceleration
 DISPLAY_DRIVER="auto !intel !amdgpu !ati !nvidia !nvidia-lts !nvidia-dkms !nvidia-470xx-dkms !nvidia-390xx-dkms !nvidia-340xx-dkms !nouveau" # (single)
 KMS="true"
-FASTBOOT="true"
+FASTBOOT="false"
 FRAMEBUFFER_COMPRESSION="true"
 DISPLAY_DRIVER_DDX="false"
 VULKAN="true"
 DISPLAY_DRIVER_HARDWARE_VIDEO_ACCELERATION="true"
 DISPLAY_DRIVER_HARDWARE_VIDEO_ACCELERATION_INTEL="intel-media-driver !libva-intel-driver" # (single)
 
+
 # config
 ## Some variables for system configuration, from timezone, locale and keyboard to the root password.
 ## KEYLAYOUT, KEYMODEL, KEYVARIANT, KEYOPTIONS see https://wiki.archlinux.org/title/X_keyboard_extension#Preset_configuration
 ## KEYMAP, FONT, FONT_MAP see https://man.archlinux.org/man/vconsole.conf.5
 ## ROOT_PASSWORD root user password. If "ask" password alis asks for a secure password.
-TIMEZONE="/usr/share/zoneinfo/Europe/Madrid"
-LOCALES=("es_ES.UTF-8 UTF-8" "en_US.UTF-8 UTF-8")
-LOCALE_CONF=("LANG=es_ES.UTF-8" "LANGUAGE=es_ES:es:en_US:en")
-KEYLAYOUT="es"
+TIMEZONE="/usr/share/zoneinfo/Asia/Dhaka"
+LOCALES=("en_US.UTF-8 UTF-8")
+LOCALE_CONF=("LANG=en_US.UTF-8" "LANGUAGE=en_US:en")
+KEYLAYOUT="us"
 KEYMODEL=""
 KEYVARIANT=""
 KEYOPTIONS=""
-KEYMAP="KEYMAP=es"
+KEYMAP="KEYMAP=us"
 FONT=""
 FONT_MAP=""
-HOSTNAME="archlinux"
-ROOT_PASSWORD="ask"
-ROOT_PASSWORD_RETYPE="ask"
+HOSTNAME="host"
+ROOT_PASSWORD="y"
+ROOT_PASSWORD_RETYPE="y"
 
 # user
 ## USER_NAME, USER_PASSWORD Regular user to create in the system. A password must be specified, if "ask" password alis asks for a secure password.
 ## ADDITIONAL_USERS is an array of additional users to create in the system, if "ask" password alis asks for a secure password.
-USER_NAME="picodotdev"
-USER_PASSWORD="ask"
-USER_PASSWORD_RETYPE="ask"
+USER_NAME="user"
+USER_PASSWORD="y"
+USER_PASSWORD_RETYPE="y"
 ADDITIONAL_USERS=() # eg. ("user1=password1" "user2=password2")
+
 
 ## systemd-homed
 ### SYSTEMD_HOMED (experimental) "true" value requires interactivity to set user password
@@ -145,12 +147,12 @@ UKI="false"
 ## BOOTLOADER system boot loader.
 ### With auto value grub is used for BIOS system, systemd for UEFI system.
 ## SECURE_BOOT (experimental) use secure boot.
-BOOTLOADER="auto !grub !refind !systemd !efistub" # (single)
+BOOTLOADER="!auto !grub !refind !systemd efistub" # (single)
 SECURE_BOOT="false"
 
 # shell
 ## CUSTOM_SHELL configures an alternative custom shell interpreter.
-CUSTOM_SHELL="bash !zsh !dash !fish" # (single)
+CUSTOM_SHELL="!bash zsh !dash !fish" # (single)
 
 # desktop
 ## DESKTOP_ENVIRONMENT desktop environment to install.
@@ -163,13 +165,13 @@ DISPLAY_MANAGER="auto !gdm !sddm !lightdm !lxdm" # (single)
 ## PACKAGES_INSTALL installs packages on system installation, edit alis-packages.conf to select packages.
 ## PACKAGES_PIPEWIRE installs PipeWire replacing PulseAudio, requires PACKAGES_INSTALL="true".
 ### It is recommended to install packages after base installation and reboot.
-PACKAGES_MULTILIB="false"
-PACKAGES_INSTALL="false"
+PACKAGES_MULTILIB="true"
+PACKAGES_INSTALL="true"
 PACKAGES_PIPEWIRE="true"
 
 # provision
 ## PROVISION provisions the files placed in files directory on the installed system (preserving directory structure). This is useful to copy some configuration files.
-PROVISION="false"
+PROVISION="true"
 
 # misc
 ## VAGRANT for build a VirtualBox OVA with Packer
@@ -183,5 +185,5 @@ SYSTEMD_UNITS=""
 
 # reboot
 ## REBOOT on installation end reboots the system automatically. If "false" no reboot is performed and the user must do it explicitly.
-REBOOT="true"
+REBOOT="false"
 
