--- a/alis-packages.conf
+++ b/alis-packages.conf
@@ -20,7 +20,7 @@ LOG_FILE="false"
 ## PACKAGES_PACMAN_CUSTOM_REPOSITORIES custom repositories to add to pacman configuration, see https://archlinux.org/pacman/pacman.conf.5.html#_repository_sections
 ### Comment lines starting with # charater are removed
 PACKAGES_PACMAN_INSTALL="true"
-PACKAGES_PACMAN_INSTALL_PIPEWIRE="false"
+PACKAGES_PACMAN_INSTALL_PIPEWIRE="true"
 PACKAGES_PACMAN_INTERNET="!firefox !chromium !curl !wget !filezilla !sshfs !openssh !transmission-gtk !transmission-qt !liferea !gnome-boxes !gnome-tweaks"
 PACKAGES_PACMAN_MULTIMEDIA="!gthumb !gimp !imagemagick !krita !inkscape !blender !cmus !vlc !easytag !ardour !audacity !ffmpeg !gnome-phone-manager !kdeconnect !gstreamer !gst-plugins-good !gst-plugins-bad !gst-plugins-ugly !bluez !bluez-utils"
 PACKAGES_PACMAN_UTILITIES="!bash-completion !chezmoi !gnome-initial-setup !gnome-extra !code !lz4 !meld !dosfstools !ntfs-3g !exfat-utils !man-db !man-pages"
@@ -32,7 +32,7 @@ PACKAGES_PACMAN_SCIENCE="!geogebra !octave"
 PACKAGES_PACMAN_OTHERS="!klavaro !tmux terminus-font"
 PACKAGES_PACMAN_DEVELOPER="!git !python !dotnet-sdk !php !rust !go !virtualbox !docker !ansible !vagrant !packer !terraform !vault !consul !nomad"
 PACKAGES_PACMAN_CUSTOM=""
-PACKAGES_PACMAN_PIPEWIRE="pipewire pipewire-pulse pipewire-alsa wireplumber !pipewire-jack !helvum !xdg-desktop-portal !xdg-desktop-portal-gnome !xdg-desktop-portal-kde !xdg-desktop-portal-wlr"
+PACKAGES_PACMAN_PIPEWIRE="pipewire pipewire-pulse pipewire-alsa wireplumber pipewire-jack !helvum !xdg-desktop-portal !xdg-desktop-portal-gnome !xdg-desktop-portal-kde !xdg-desktop-portal-wlr"
 PACKAGES_PACMAN_CUSTOM_REPOSITORIES="
 #[custom]
 #SigLevel = Optional TrustAll
@@ -62,11 +62,11 @@ PACKAGES_SDKMAN_SDKS="!gradle !maven !kotlin !groovy" # format <candidate>:[vers
 
 ## AUR utility and AUR packages to install
 ## more at https://aur.archlinux.org/packages/
-PACKAGES_AUR_INSTALL="false"
+PACKAGES_AUR_INSTALL="true"
 PACKAGES_AUR_COMMAND="paru-bin !yay-bin !paru !yay !aurman"
 PACKAGES_AUR_INTERNET=""
 PACKAGES_AUR_MULTIMEDIA=""
-PACKAGES_AUR_UTILITIES=""
+PACKAGES_AUR_UTILITIES="git sof-firmware zsh-autosuggestions zsh-completions zsh-syntax-highligting bc jq usb_modeswitch fuse2 neovim xdg-desktop-portal-wlr iwd firefox impala 7zip tar zip pbzip2 pigz pixz btop mpv gtklock android-tools xwayland-satellite syncthing aria2 cmus usbutils yazi sshfs niri wezterm-git eww-git bluetuith-bin mmtui-bin calcure ncpamixer wl-clipboard-rs xdg-desktop-portal-termfilechooser-hunkyburrito-git"
 PACKAGES_AUR_DOCUMENTS_AND_TEXT=""
 PACKAGES_AUR_COMMUNICATION=""
 PACKAGES_AUR_GAMES=""
