--- a/alis-packages.conf
+++ b/alis-packages.conf
@@ -32,7 +32,7 @@ PACKAGES_PACMAN_SCIENCE="!geogebra !octave"
 PACKAGES_PACMAN_OTHERS="!klavaro !tmux terminus-font"
 PACKAGES_PACMAN_DEVELOPER="!git !python !dotnet-sdk !php !rust !go !virtualbox !docker !ansible !vagrant !packer !terraform !vault !consul !nomad"
 PACKAGES_PACMAN_CUSTOM=""
-PACKAGES_PACMAN_PIPEWIRE="pipewire pipewire-pulse pipewire-alsa wireplumber pipewire-jack !helvum !xdg-desktop-portal !xdg-desktop-portal-gnome !xdg-desktop-portal-kde !xdg-desktop-portal-wlr"
+PACKAGES_PACMAN_PIPEWIRE="pipewire pipewire-pulse pipewire-alsa wireplumber pipewire-jack !helvum xdg-desktop-portal !xdg-desktop-portal-gnome !xdg-desktop-portal-kde xdg-desktop-portal-wlr"
 PACKAGES_PACMAN_CUSTOM_REPOSITORIES="
 #[custom]
 #SigLevel = Optional TrustAll
@@ -66,7 +66,7 @@ PACKAGES_AUR_INSTALL="true"
 PACKAGES_AUR_COMMAND="paru-bin !yay-bin !paru !yay !aurman"
 PACKAGES_AUR_INTERNET=""
 PACKAGES_AUR_MULTIMEDIA=""
-PACKAGES_AUR_UTILITIES="git sof-firmware zsh-autosuggestions zsh-completions zsh-syntax-highligting bc jq usb_modeswitch fuse2 neovim xdg-desktop-portal-wlr iwd firefox impala 7zip tar zip pbzip2 pigz pixz btop mpv gtklock android-tools xwayland-satellite syncthing aria2 cmus usbutils yazi sshfs niri wezterm-git eww-git bluetuith-bin mmtui-bin calcure ncpamixer wl-clipboard-rs xdg-desktop-portal-termfilechooser-hunkyburrito-git"
+PACKAGES_AUR_UTILITIES="git sof-firmware zsh-autosuggestions zsh-completions zsh-syntax-highlighting bc jq usb_modeswitch fuse2 neovim xdg-desktop-portal-wlr iwd firefox impala 7zip tar zip pbzip2 pigz pixz btop mpv gtklock android-tools xwayland-satellite syncthing aria2 cmus usbutils yazi sshfs niri wezterm-git eww-git bluetuith-bin mmtui-bin calcure ncpamixer wl-clipboard-rs xdg-desktop-portal-termfilechooser-hunkyburrito-git"
 PACKAGES_AUR_DOCUMENTS_AND_TEXT=""
 PACKAGES_AUR_COMMUNICATION=""
 PACKAGES_AUR_GAMES=""
@@ -85,5 +85,4 @@ PACKAGES_AUR="$PACKAGES_AUR_INTERNET $PACKAGES_AUR_MULTIMEDIA $PACKAGES_AUR_UTIL
 ## SYSTEMD_UNITS systemd units to enable or disable.
 ### If preceded with a "+" unit is enabled, if preceded with "-" unit is disabled, if preceded with "!" unit is ignored (no action is performed).
 ### eg. "+ufw.service" to enable, "-ufw.service" to disable, "!ufw.service" to ignore
-SYSTEMD_UNITS="!ufw.service !bluetooth.service !docker.service"
-
+SYSTEMD_UNITS=""
