--- a/files/etc/yazi/keymap.toml
+++ b/files/etc/yazi/keymap.toml
@@ -1,9 +1,9 @@
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on   = "M"
 run  = "plugin mount"
 desc = "Mount manager"
 
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on   = [ "c", "a" ]
 run  = "plugin compress"
 desc = "Archive selected files"
