--- a/alis.conf
+++ b/alis.conf
@@ -68,7 +68,7 @@ PING_HOSTNAME="mirrors.kernel.org"
 ## KERNELS_PARAMETERS specific kernel parameters to set on boot. eg. iommu=soft
 REFLECTOR="false"
 REFLECTOR_COUNTRIES=("Spain")
-PACMAN_MIRROR="https://mirror.xeonbd.com/archlinux/\$repo/os/\$arch"
+PACMAN_MIRROR="https://mirrors.ustc.edu.cn/archlinux/\$repo/os/\$arch"
 PACMAN_PARALLEL_DOWNLOADS="true"
 KERNELS="!linux-lts !linux-lts-headers !linux-hardened !linux-hardened-headers !linux-zen !linux-zen-headers" # (multiple)
 KERNELS_COMPRESSION="!gzip !bzip2 !lzma !xz !lzop !lz4 zstd"
