--- a/alis.conf
+++ b/alis.conf
@@ -181,7 +181,7 @@ VAGRANT="false"
 ## SYSTEMD_UNITS systemd units to enable or disable.
 ### If preceded with a "+" unit is enabled, if preceded with "-" unit is disabled, if preceded with "!" unit is ignored (no action is performed).
 ### eg. "+ufw.service" to enable, "-ufw.service" to disable, "!ufw.service" to ignore
-SYSTEMD_UNITS="+bluetooth.service +systemd-networkd.service +systemd-resolved.service +iwd.service +adbserver.service +zshroot.service +xpermprovider.service"
+SYSTEMD_UNITS="+bluetooth.service +systemd-networkd.service +systemd-resolved.service +iwd.service +adbserver.service +zshroot.service"
 
 # reboot
 ## REBOOT on installation end reboots the system automatically. If "false" no reboot is performed and the user must do it explicitly.
