--- a/alis-packages.conf
+++ b/alis-packages.conf
@@ -66,7 +66,7 @@ PACKAGES_AUR_INSTALL="true"
 PACKAGES_AUR_COMMAND="paru-bin !yay-bin !paru !yay !aurman"
 PACKAGES_AUR_INTERNET=""
 PACKAGES_AUR_MULTIMEDIA=""
-PACKAGES_AUR_UTILITIES="acpid git sof-firmware zsh-autosuggestions zsh-completions zsh-syntax-highlighting bc jq usb_modeswitch fuse2 neovim xdg-desktop-portal-wlr iwd firefox impala 7zip tar zip pbzip2 pigz pixz btop mpv gtklock android-tools xwayland-satellite syncthing aria2 cmus usbutils yazi sshfs niri wezterm-nightly-bin eww-git bluetuith-bin mmtui-bin calcure wiremix wl-clipboard-rs xdg-desktop-portal-termfilechooser-hunkyburrito-git"
+PACKAGES_AUR_UTILITIES="acpid git sof-firmware zsh-autosuggestions zsh-completions zsh-syntax-highlighting bc jq usb_modeswitch fuse2 neovim xdg-desktop-portal-wlr iwd firefox impala 7zip tar zip pbzip2 pigz pixz btop mpv gtklock android-tools xwayland-satellite syncthing aria2 cmus usbutils yazi sshfs niri wezterm-nightly-bin eww-git bluetuith-bin mmtui-bin calcure wiremix wl-clipboard-rs fzf ripgrep fd xdg-desktop-portal-termfilechooser-hunkyburrito-git"
 PACKAGES_AUR_DOCUMENTS_AND_TEXT=""
 PACKAGES_AUR_COMMUNICATION=""
 PACKAGES_AUR_GAMES=""
